--- a/css/styles.css
+++ b/css/styles.css
@@ -475,7 +475,26 @@ h3 {
   background: var(--accent-color);
   color: var(--text-white-color);
 }
-
+.item-but.all {
+  width: 73px;
+  height: 38px;
+}
+.item-but.web {
+  width: 128px;
+  height: 38px;
+}
+.item-but.app {
+  width: 145px;
+  height: 38px;
+}
+.item-but.design {
+  width: 103px;
+  height: 38px;
+}
+.item-but.marketing {
+  width: 130px;
+  height: 38px;
+}
 .flex-container {
   display: flex;
   flex-wrap: wrap;
@@ -485,6 +504,12 @@ h3 {
 .examples-links {
   width: 370px;
   margin: 15px;
+  border: 1px solid #eeeeee;
+}
+.examples-links:hover,
+.examples-links:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .examples-links .examples-description {
